--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "router",
+  "name": "desafio-mod-8",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack",
-    "start": "live-server"
+    "start": "live-server ./index.html"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.0",
-    "@babel/core": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2"
-  },
-  "dependencies": {
-    "@types/react": "^17.0.39",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
+    "@types/react-jss": "^10.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "firebase": "^9.6.10",
-    "live-server": "^1.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "live-server": "1.2.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "recoil": "^0.7.0",
-    "style-loader": "^3.3.1",
-    "tsconfig-paths-webpack-plugin": "^3.5.2"
+    "react-dropzone": "^11.5.1",
+    "react-router-dom": "^6.0.2",
+    "recoil": "^0.5.2",
+    "recoil-persist": "^4.0.0",
+    "sweetalert2": "^11.1.9"
   }
 }
