--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
+    "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^6.0.2",
     "recoil": "^0.5.2",
     "recoil-persist": "^4.0.0",
