--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.5.0",
+    "algolia": "^0.0.0",
+    "algoliasearch": "^4.10.5",
+    "cloudinary": "^1.27.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.5.1",
     "react": "^17.0.2",
@@ -33,6 +37,8 @@
     "react-router-dom": "^6.0.2",
     "recoil": "^0.5.2",
     "recoil-persist": "^4.0.0",
-    "sweetalert2": "^11.1.9"
+    "sequelize": "^6.20.1",
+    "sweetalert2": "^11.1.9",
+    "swr": "^1.3.0"
   }
 }
